fixed typo bug and added wrm praat ik engels ja dus samenwerking ding in latex toegeve3ogd

--- a/document pt 3/prac3.tex
+++ b/document pt 3/prac3.tex
@@ -228,9 +228,33 @@
 
 
     \section*{Work Distribution \& Retrospective}
-
-    \subsection*{Task Distribution}
-
-    \subsection*{Retrospective}
-
+    Again the collaboration went smoothly, we basicaly kept working together in the same way as the previous 2 projects since that worked very well.
+    Splitting the tasks equaly and working on them together in the 'werkcolleges', and helping each other out when needed.
+    Then continuing to work on our tasks at home and send eachy other messages when needed.
+    We distributed the work as even as possible, here is a short overview:
+    \newline\texttt{Arwin}
+    \begin{itemize}
+        \item Layout of UI in Avalonia
+        \item Made the \texttt{OutputDrawer} class using ImageSharp and added basic drawing functionality
+        \item Added functionality for loading programs and grids through files
+        \item Added buttons for loading different example programs
+        \item Added a dropdown box for switching between different size grids
+        \item Worked on this document
+    \end{itemize}
+    \texttt{Jan}
+    \begin{itemize}
+        \item Added functionality to the UI in Avalonia
+        \item Finalised the \texttt{OutputDrawer} by drawing the character and grid walls
+        \item Updated the Class diagram
+        \item Added the new Commands
+        \item Updated the Grid class to support walls
+        \item Implemented all the Tests
+        \item Worked on this document
+    \end{itemize}
+    Overall we really liked working together these 3 projects and we learned a lot from it.
+    For example we have only made UI with Windows Forms before so we learned a lot by using Avalonia this time.
+    And it was also the first time we where using Rider as our IDE.
+    And of course we learned a whole lot of new design patterns and how to use them in practice.
+    At last we did not encounter any major issues during this project, only a few discussions that we could resolve easily.
+    We would like to work together again in the future.
 \end{document}
