added test result picture

--- a/document pt 3/prac3.tex
+++ b/document pt 3/prac3.tex
@@ -223,9 +223,14 @@
         \item Catching file errors: We tried to load files with invalid formats, and checked if the program catches the errors and displays an appropriate message to the user.
         \item Catching out-of-bounds errors: We created scenarios where the character would try to move out of bounds, and checked if the program catches the errors and displays an appropriate message to the user.
     \end{enumerate}
-
+    \newpage
     \subsection*{Final test run} %foto van alle geslaagde tests op het eind
-
+    \begin{figure}[htbp]
+        \label{fig:tests-output}
+        \centering
+        \includegraphics[width=0.6\textwidth]{tests.PNG}
+        \caption{\small{Output of all the Unit Tests}}
+    \end{figure}
 
     \section*{Work Distribution \& Retrospective}
     Again the collaboration went smoothly, we basicaly kept working together in the same way as the previous 2 projects since that worked very well.
