--- a/document pt 3/prac3.tex
+++ b/document pt 3/prac3.tex
@@ -228,15 +228,15 @@
     \begin{figure}[htbp]
         \label{fig:tests-output}
         \centering
-        \includegraphics[width=0.6\textwidth]{tests.PNG}
+        \includegraphics[width=0.6\textwidth]{tests}
         \caption{\small{Output of all the Unit Tests}}
     \end{figure}
 
     \section*{Work Distribution \& Retrospective}
-    Again the collaboration went smoothly, we basicaly kept working together in the same way as the previous 2 projects since that worked very well.
-    Splitting the tasks equaly and working on them together in the 'werkcolleges', and helping each other out when needed.
-    Then continuing to work on our tasks at home and send eachy other messages when needed.
-    We distributed the work as even as possible, here is a short overview:
+    Again the collaboration went smoothly, we basically kept working together in the same way as the previous 2 projects since that worked very well.
+    Splitting the tasks equally and working on them together in the `werkcolleges', and helping each other out when needed.
+    Then continuing to work on our tasks at home and send each other messages when needed.
+    We distributed the work as even as possible, here is a short (maybe incomplete) overview:
     \newline\texttt{Arwin}
     \begin{itemize}
         \item Layout of UI in Avalonia
@@ -256,9 +256,9 @@
         \item Implemented all the Tests
         \item Worked on this document
     \end{itemize}
-    Overall we really liked working together these 3 projects and we learned a lot from it.
-    For example we have only made UI with Windows Forms before so we learned a lot by using Avalonia this time.
-    And it was also the first time we where using Rider as our IDE.
+    Overall we really liked working together these 3 projects, and we learned a lot from it.
+    For example, we have only made UI with Windows Forms before so we learned a lot by using Avalonia this time.
+    It was also the first time we used Rider as our IDE.
     And of course we learned a whole lot of new design patterns and how to use them in practice.
     At last we did not encounter any major issues during this project, only a few discussions that we could resolve easily.
     We would like to work together again in the future.
